infrastructure/manifests/services.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: myapp
  labels:
    app: postgres
spec:
  type: NodePort
  ports:
    - port: 5432
  selector:
    app: postgres
---
apiVersion: v1
kind: Service
metadata:
  name: myapp
  namespace: myapp
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 5000
      protocol: TCP
  selector:
    app: myapp
